crates/compiler/src/tests/e2e/good/0304_struct_pair/main.gom
struct Pair[A, B] {
    first: A,
    second: B,
}

fn swap[A, B](p: Pair[A, B]) -> Pair[B, A] {
    Pair { first: p.second, second: p.first }
}

fn main() {
    let p = Pair { first: 1, second: "hello" };
    let s = swap(p);
    println(s.first);
    println((s.second).to_string());
}
