crates/compiler/src/tests/e2e/bad/0039_refutable_let_pattern/main.gom
enum Pair[A, B] {
    MakePair(A, B),
}

fn main() {
    let p = Pair::MakePair(1, "hello");
    let Pair::MakePair(x, y) = p;
    println(int32_to_string(x));
    println(y);
}
